Fix chrome clipping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Fix Chrome clipping on scroll */
+html.has-scroll-smooth {
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
